name:                git-tools
version:             0.2.1
-- synopsis:
-- description:
homepage:            https://github.com/freizl/git-tools#readme
license:             BSD3
license-file:        LICENSE
author:              Haisheng Wu
maintainer:          freizl@gmail.com
copyright:           2016 Haisheng Wu
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Pull
  build-depends:       base >= 4.7 && < 5
                     , turtle
                     , directory
                     , text
                     , system-filepath
                     , managed
  default-language:    Haskell2010

executable git-update-all
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , git-tools
  default-language:    Haskell2010

test-suite git-update-all-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , git-update-all
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/freizl/git-tools
